--- a/.skhdrc
+++ b/.skhdrc
@@ -15,7 +15,7 @@ cmd + shift - d : yabai -m window --toggle float;\
           yabai -m window --grid 4:4:1:1:2:2
 
 # fast toggle fullscreen
-cmd + shift - f : yabai -m window --toggle zoom-fullscreen
+# cmd + shift - f : yabai -m window --toggle zoom-fullscreen
 
 # set insertion point in focused container
 cmd + alt - h : yabai -m window --insert west
@@ -24,54 +24,38 @@ cmd + alt - k : yabai -m window --insert north
 cmd + alt - l : yabai -m window --insert east
 
 # open browser
-cmd - i : open -na "Google Chrome" --args --new-window
-cmd + shift - i : open -na "Google Chrome" --args --incognito
+cmd - i : open -na "Brave Browser" --args --new-window
+cmd + shift - i : open -na "Brave Browser" --args --incognito
 
 cmd + shift - p : yabai -m space --focus prev
 cmd + shift - n : yabai -m space --focus next
-
-# zen mode (cmd - ;)
-:: zen @ : yabai -m config status_bar_background_color 0xffBE4F45
-cmd - 0x29 ; zen
 
 :: zenwindow @ : yabai -m config status_bar_background_color 0xff24CCAA
 
 :: zenspace @ : yabai -m config status_bar_background_color 0xff0081C1
 
-zen, zenspace < 0x24 ; zenwindow # <enter>
-zen, zenwindow < 0x31 ; zenspace # <space>
+zenspace < 0x24 ; zenwindow # <enter>
+zenwindow < 0x31 ; zenspace # <space>
 cmd + shift - 0x24 ; zenwindow # cmd + shift - <enter>
 cmd + shift - 0x31 ; zenspace # cmd + shift - <space>
 
-# set insertion point in focused container
-zen < alt - h : yabai -m window --insert west
-zen < alt - j : yabai -m window --insert south
-zen < alt - k : yabai -m window --insert north
-zen < alt - l : yabai -m window --insert east
-
 # rotate tree
-zen < r : yabai -m space --rotate 90
+zenwindow < r : yabai -m space --rotate 90
 
 # mirror tree y-axis
-zen < y : yabai -m space --mirror y-axis
+zenwindow < y : yabai -m space --mirror y-axis
 
 # mirror tree x-axis
-zen < alt - x : yabai -m space --mirror x-axis
+zenwindow < x : yabai -m space --mirror x-axis
 
 # toggle desktop offset
-zen < alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
-
-# toggle window parent zoom
-zen < d : yabai -m window --toggle zoom-parent
-
-# toggle window fullscreen zoom
-zen < f : yabai -m window --toggle zoom-fullscreen
+zenwindow < alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
 
 # toggle window border
-zen < alt + shift - b : yabai -m window --toggle border
+zenwindow < alt + shift - b : yabai -m window --toggle border
 
 # toggle window split type
-zen < alt - e : yabai -m window --toggle split
+zenwindow < alt - e : yabai -m window --toggle split
 
 # focus window
 zenwindow < h : yabai -m window --focus west
@@ -112,12 +96,11 @@ zenwindow < shift - s : yabai -m window --resize bottom:0:-20
 zenwindow < shift - w : yabai -m window --resize top:0:20
 zenwindow < shift - d : yabai -m window --resize right:-20:0
 
-# switch back to zen mode
-zenwindow < z ; zen
-
 # float / unfloat window and center on screen
 zenwindow < t : yabai -m window --toggle float;\
           yabai -m window --grid 4:4:1:1:2:2
+
+zenwindow < f : yabai -m window --toggle zoom-fullscreen
 
 ### create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
 zenspace < ctrl - u : yabai -m space --create && \
@@ -196,10 +179,7 @@ zenspace < shift - m : yabai -m window --space  8; yabai -m space --focus 8 ; sk
 zenspace < shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9 ; skhd --key "escape" # shift - ,
 zenspace < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10 ; skhd --key "escape" # shift - .
 
-# switch back to zen mode
-zenspace < z ; zen
-
 # switch between displays/monitors
 zenspace < 0x24 : yabai -m display --focus recent ; skhd --key "escape" # <cr>
 
-zen, zenwindow, zenspace < escape ; default
+zenwindow, zenspace < escape ; default
