--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,4 @@ init.author.email=tyler@tylerevans.co
 init.author.url=www.tylerevans.co
 init.license=MIT
 @octanner:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+//npm.pkg.github.com/:_authToken=${OCT_VAULT_TOKENS_GITHUB_TOKEN}
