--- a/.yabairc
+++ b/.yabairc
@@ -16,16 +16,16 @@ yabai -m config mouse_follows_focus          off
 yabai -m config focus_follows_mouse          off
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               off
-yabai -m config window_opacity               off
+yabai -m config window_opacity               on
 yabai -m config window_opacity_duration      0.0
 yabai -m config window_shadow                on
-yabai -m config window_border                on
+yabai -m config window_border                off
 yabai -m config window_border_width          1
 yabai -m config active_window_border_color   0xff5FDBA7
 yabai -m config normal_window_border_color   0xff505050
 yabai -m config insert_window_border_color   0xff0081C1
 yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.90
+yabai -m config normal_window_opacity        0.95
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               fn
