--- a/.yabairc
+++ b/.yabairc
@@ -1,5 +1,8 @@
 #!/usr/bin/env sh
 
+sudo yabai --load-sa
+yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
+
 # bar settings
 yabai -m config status_bar                   on
 yabai -m config status_bar_text_font         "Helvetica Neue:Bold:12.0"
@@ -19,13 +22,13 @@ yabai -m config window_topmost               off
 yabai -m config window_opacity               on
 yabai -m config window_opacity_duration      0.0
 yabai -m config window_shadow                on
-yabai -m config window_border                off
+yabai -m config window_border                on
 yabai -m config window_border_width          1
 yabai -m config active_window_border_color   0xff5FDBA7
 yabai -m config normal_window_border_color   0xff505050
 yabai -m config insert_window_border_color   0xff0081C1
 yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.95
+yabai -m config normal_window_opacity        1.0
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               fn
@@ -34,7 +37,7 @@ yabai -m config mouse_action2                resize
 
 # general space settings
 yabai -m config layout                       bsp
-yabai -m config top_padding                  8
+yabai -m config top_padding                  32
 yabai -m config bottom_padding               8
 yabai -m config left_padding                 8
 yabai -m config right_padding                8
@@ -46,3 +49,4 @@ yabai -m rule --add app="Cisco AnyConnect Secure Mobility Client" manage=off top
 yabai -m rule --add app="Finder" manage=off
 yabai -m rule --add app="Activity Monitor" manage=off
 yabai -m rule --add app="Logi Options" manage=off
+yabai -m rule --add app="Rainway" manage=off
