--- a/.skhdrc
+++ b/.skhdrc
@@ -24,11 +24,11 @@ cmd + alt - k : yabai -m window --insert north
 cmd + alt - l : yabai -m window --insert east
 
 # open browser
-# cmd - i : open -na "Firefox"
-# cmd + shift - i : open -na "Firefox" --args -private-window
+cmd - i : open -na "Firefox"
+cmd + shift - i : open -na "Firefox" --args -private-window
 
-cmd - i : open -na "Brave Browser"
-cmd + shift - i : open -na "Brave Browser" --args --incognito
+# cmd - i : open -na "Brave Browser"
+# cmd + shift - i : open -na "Brave Browser" --args --incognito
 
 cmd + shift - p : yabai -m space --focus prev
 cmd + shift - n : yabai -m space --focus next
