feat: loads of awesome changes

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,6 +2,7 @@
   "suggest.autoTrigger": "always",
   "suggest.minTriggerInputLength": 2,
   "suggest.triggerAfterInsertEnter": true,
+  "coc.preferences.formatOnSaveFiletypes": ["rust"],
   "coc.source.OmniSharp.enable": true,
   "coc.source.OmniSharp.triggerCharacters": ".",
   "eslint.filetypes": [
