--- a/.spacebarrc
+++ b/.spacebarrc
@@ -1,12 +1,12 @@
 #!/usr/bin/env sh
 
 # bar settings
-spacebar -m config status_bar_text_font         "Fira Code:Regular:12.0"
-spacebar -m config status_bar_icon_font         "FontAwesome:Regular:12.0"
-spacebar -m config status_bar_background_color  0xff202020
-spacebar -m config status_bar_foreground_color  0xffa8a8a8
-spacebar -m config status_bar_space_icon_strip  'H' 'J' 'K' 'L' ':' '"' 'N' 'M' '<' '>'
-spacebar -m config status_bar_power_icon_strip   
-spacebar -m config status_bar_space_icon        
-spacebar -m config status_bar_clock_icon        
-spacebar -m config status_bar_clock_format      "%m/%d/%y %R"
+spacebar -m config text_font         "Fira Code:Regular:12.0"
+spacebar -m config icon_font         "FontAwesome:Regular:12.0"
+spacebar -m config background_color  0xff202020
+spacebar -m config foreground_color  0xffa8a8a8
+spacebar -m config space_icon_strip  'H' 'J' 'K' 'L' ':' '"' 'N' 'M' '<' '>'
+spacebar -m config power_icon_strip   
+spacebar -m config space_icon        
+spacebar -m config clock_icon        
+spacebar -m config clock_format      "%m/%d/%y %R"
