--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,9 +5,6 @@ tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "homebrew/services"
-tap "koekeishiya/formulae"
-tap "pivotal/tap"
-tap "somdoron/formulae"
 tap "spring-io/tap"
 brew "autojump"
 brew "python@3.9"
@@ -19,8 +16,8 @@ brew "ccls"
 brew "circleci"
 brew "clang-format"
 brew "cmake"
-brew "docker", link: false
-brew "docker-compose", link: false
+brew "docker"
+brew "docker-compose"
 brew "fish"
 brew "fzf"
 brew "git"
@@ -36,7 +33,6 @@ brew "nghttp2"
 brew "node"
 brew "ripgrep"
 brew "ruby"
-brew "the_silver_searcher"
 brew "tree"
 brew "yarn"
 brew "zsh"
@@ -60,3 +56,4 @@ cask "slack"
 cask "tableplus"
 cask "visual-studio-code"
 cask "zoom"
+mas "BetterSnapTool", id: 417375580
