correct tab colors

--- a/kitty.conf
+++ b/kitty.conf
@@ -17,10 +17,10 @@ tab_bar_margin_height 2.0 0.0
 tab_bar_style separator
 tab_bar_min_tabs 1
 tab_separator ' | '
-active_tab_foreground   #8ec185
+active_tab_foreground   #abdb89
 active_tab_background   #272a32
 active_tab_font_style   bold-italic
-inactive_tab_foreground #c368cc
+inactive_tab_foreground #c477dc
 inactive_tab_background #272a32
 inactive_tab_font_style normal
 
