kitty open current dir in new window

--- a/kitty.conf
+++ b/kitty.conf
@@ -60,6 +60,7 @@ map kitty_mod+shift+j next_window
 map kitty_mod+shift+p previous_window
 map kitty_mod+shift+k previous_window
 
+map alt+h launch --cwd=current
 map kitty_mod+w close_window
 
 map kitty_mod+1 goto_tab 1
