use init.vim, update install, kitty tweaks

--- a/kitty.conf
+++ b/kitty.conf
@@ -3,6 +3,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 font_size 12.0
+adjust_line_height 85%
+adjust_baseline 15%
 disable_ligatures never
 
 # window
@@ -55,6 +57,10 @@ macos_hide_from_tasks yes
 
 # keyboard shortcuts
 kitty_mod cmd
+
+map alt+u scroll_line_up
+map alt+d scroll_line_down
+
 map kitty_mod+shift+n next_window
 map kitty_mod+shift+j next_window
 map kitty_mod+shift+p previous_window
