--- a/kitty.conf
+++ b/kitty.conf
@@ -19,6 +19,7 @@ tab_bar_margin_height 2.0 0.0
 tab_bar_style separator
 tab_bar_min_tabs 1
 tab_separator ' | '
+tab_title_template "{index}:{title}"
 active_tab_foreground   #abdb89
 active_tab_background   #272a32
 active_tab_font_style   bold-italic
@@ -77,5 +78,4 @@ map kitty_mod+5 goto_tab 5
 map kitty_mod+6 goto_tab 6
 map kitty_mod+7 goto_tab 7
 map kitty_mod+8 goto_tab 8
-map kitty_mod+9 goto_tab 9
-map kitty_mod+0 goto_tab 9999
+map kitty_mod+9 goto_tab 9999
