--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,4 @@
-font_family      Fira Code
+font_family      Fira Code Medium
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -6,6 +6,7 @@ font_size 12.0
 adjust_line_height 85%
 adjust_baseline 15%
 disable_ligatures never
+font_features FiraCode-Retina
 
 # window
 draw_minimal_borders yes
