feat(kitty): open links

--- a/kitty.conf
+++ b/kitty.conf
@@ -60,6 +60,8 @@ macos_hide_from_tasks yes
 # keyboard shortcuts
 kitty_mod cmd
 
+map kitty_mod+shift+o open_url_with_hints
+
 map alt+u scroll_line_up
 map alt+d scroll_line_down
 
