more linux work

--- a/kitty.conf
+++ b/kitty.conf
@@ -52,7 +52,7 @@ color15               #fffefe
 selection_foreground  #a7b1be
 
 # advanced
-shell /usr/local/bin/fish
+shell fish
 editor nvim
 
 macos_hide_from_tasks yes
