allow switching between mods

--- a/linux/i3.config
+++ b/linux/i3.config
@@ -92,6 +92,7 @@ mode "zenwindow" {
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
+        bindsym $mod+Shift+space mode "zenspace"
 }
 
 bindsym $mod+Shift+Return mode "zenwindow"
@@ -164,6 +165,7 @@ mode "zenspace" {
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
+        bindsym $mod+Shift+Return mode "zenwindow"
 }
 
 bindsym $mod+Shift+space mode "zenspace"
