--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,8 @@
-font_family      Fira Code Medium
+font_family      Fira Code
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 12.0
-adjust_line_height 85%
-adjust_baseline 15%
+font_size 10.0
 disable_ligatures never
 font_features FiraCode-Retina
 
