--- a/linux/i3.config
+++ b/linux/i3.config
@@ -17,7 +17,7 @@ set $win Mod4
 # font pango:monospace 8
 focus_follows_mouse no
 # for_window [class=".*"] border pixel 0
-gaps inner 5
+# gaps inner 5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
