--- a/kitty.conf
+++ b/kitty.conf
@@ -2,7 +2,7 @@ font_family      Fira Code
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 10.0
+font_size 11.0
 disable_ligatures never
 font_features FiraCode-Retina
 
@@ -11,20 +11,8 @@ draw_minimal_borders yes
 hide_window_decorations titlebar-only
 inactive_text_alpha 0.7
 
-# tab
-tab_bar_edge top
-tab_bar_margin_width 5.0
-tab_bar_margin_height 2.0 0.0
-tab_bar_style separator
-tab_bar_min_tabs 1
-tab_separator ' | '
-tab_title_template "{index}:{title}"
-active_tab_foreground   #abdb89
-active_tab_background   #272a32
-active_tab_font_style   bold-italic
-inactive_tab_foreground #c477dc
-inactive_tab_background #272a32
-inactive_tab_font_style normal
+# no tabs
+tab_bar_style hidden
 
 # color scheme
 background            #272a32
@@ -63,20 +51,5 @@ map kitty_mod+shift+o open_url_with_hints
 map alt+u scroll_line_up
 map alt+d scroll_line_down
 
-map kitty_mod+shift+n next_window
-map kitty_mod+shift+j next_window
-map kitty_mod+shift+p previous_window
-map kitty_mod+shift+k previous_window
-
-map alt+h launch --cwd=current
-map kitty_mod+w close_window
-
-map kitty_mod+1 goto_tab 1
-map kitty_mod+2 goto_tab 2
-map kitty_mod+3 goto_tab 3
-map kitty_mod+4 goto_tab 4
-map kitty_mod+5 goto_tab 5
-map kitty_mod+6 goto_tab 6
-map kitty_mod+7 goto_tab 7
-map kitty_mod+8 goto_tab 8
-map kitty_mod+9 goto_tab 9999
+map kitty_mod+t no_op
+map ctrl+0x29 ctrl+a
