--- a/linux/i3.config
+++ b/linux/i3.config
@@ -179,6 +179,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Really, exit?' -b 'Yes' 'i3-
 
 # panel
 bar {
+        position top
         colors {
         background #2f343f
         statusline #2f343f
