--- a/tmux/config
+++ b/tmux/config
@@ -9,17 +9,15 @@ set -sg escape-time 0
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
+bind space list-sessions
 bind q detach
 
 # split panes
 unbind v
 unbind h
 
-unbind % # Split vertically
-unbind '"' # Split horizontally
-
-bind v split-window -h -c "#{pane_current_path}"
-bind b split-window -v -c "#{pane_current_path}"
+bind '"' split-window -h -c "#{pane_current_path}"
+bind "'" split-window -v -c "#{pane_current_path}"
 
 unbind d
 unbind s
@@ -50,6 +48,4 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 bind-key -r h run-shell "~/.local/bin/tmux-sessionizer ~/workspace/octanner/prism-ui"
 bind-key -r o run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
-bind-key -r k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/octanner/media-library"
-bind-key -r l run-shell "~/.local/bin/tmux-sessionizer ~/workspace/octanner/celebrationsui"
 bind-key -r n run-shell "~/.local/bin/tmux-sessionizer ~/notes"
