--- a/kitty.conf
+++ b/kitty.conf
@@ -55,9 +55,9 @@ map kitty_mod+enter send_text all \x01
 map kitty_mod+j send_text all \x01
 
 # tmux pane focus
-map kitty_mod+shift+h send_text all \x01d
-map kitty_mod+shift+j send_text all \x01s
-map kitty_mod+shift+k send_text all \x01x
-map kitty_mod+shift+l send_text all \x01c
+map kitty_mod+shift+h send_text all \x01[
+map kitty_mod+shift+j send_text all \x01@
+map kitty_mod+shift+k send_text all \x01_
+map kitty_mod+shift+l send_text all \x01]
 
 map kitty_mod+shift+z send_text all \x01z
