streamline tmux session switching & creating

--- a/tmux/config
+++ b/tmux/config
@@ -35,8 +35,9 @@ bind ] select-pane -R
 set -g history-limit 100000
 
 # forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww tmux-sessionizer"
+bind-key -r o run-shell "tmux-session-switcher"
 
-bind-key -r h run-shell "~/.local/bin/tmux-sessionizer ~/workspace/octanner/prism-ui"
-bind-key -r o run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
-bind-key -r n run-shell "~/.local/bin/tmux-sessionizer ~/notes"
+bind-key -r h run-shell "tmux-sessionizer ~/workspace/octanner/prism-ui"
+bind-key -r t run-shell "tmux-sessionizer ~/.dotfiles"
+bind-key -r n run-shell "tmux-sessionizer ~/notes"
