--- a/tmux/config
+++ b/tmux/config
@@ -36,8 +36,14 @@ set -g history-limit 100000
 
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux-sessionizer"
+bind-key -r p run-shell "tmux-sessionizer"
 bind-key -r o run-shell "tmux-session-switcher"
 
-bind-key -r h run-shell "tmux-sessionizer ~/workspace/octanner/prism-ui"
+bind-key -r i run-shell "tmux-sessionizer ~/workspace/octanner/prism-ui"
 bind-key -r t run-shell "tmux-sessionizer ~/.dotfiles"
 bind-key -r n run-shell "tmux-sessionizer ~/notes"
+
+bind-key -r -T prefix k resize-pane -U 5
+bind-key -r -T prefix j resize-pane -D 5
+bind-key -r -T prefix h resize-pane -L 5
+bind-key -r -T prefix l resize-pane -R 5
