--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
-init.author.name=tyler evans
-init.author.email=tyler@tylerevans.co
-init.author.url=http://www.tylerevans.co/
-init.license=MIT
+init-author-name=tyler evans
+init-author-email=tyler@tylerevans.co
+init-author-url=http://www.tylerevans.co/
+init-license=MIT
 
 @octanner:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${GITHUB_PAT}
