--- a/kitty.conf
+++ b/kitty.conf
@@ -5,6 +5,7 @@ bold_italic_font auto
 font_size 11.0
 disable_ligatures never
 font_features FiraCode-Retina
+text_composition_strategy 0.50 30
 
 # window
 draw_minimal_borders yes
@@ -38,7 +39,7 @@ color15               #fffefe
 selection_foreground  #a7b1be
 
 # advanced
-editor nvim
+editor /opt/homebrew/bin/nvim
 
 # keyboard shortcuts
 kitty_mod cmd
