--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,21 +1,20 @@
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
-tap "homebrew/core"
 tap "homebrew/services"
 brew "bat"
 brew "cask"
 brew "fzf"
 brew "git"
+brew "jq"
 brew "neovim"
-brew "pnpm"
 brew "ripgrep"
 brew "scc"
+brew "stylua"
 brew "tmux"
 brew "tree"
+brew "volta"
 brew "zsh"
-brew "jesseduffield/lazygit/lazygit"
 cask "alfred"
 cask "authy"
 cask "brave-browser"
@@ -28,4 +27,3 @@ cask "obsidian"
 cask "scroll-reverser"
 cask "slack"
 cask "visual-studio-code"
-cask "gh"
