chore: add machin_specific area

--- a/.npmrc
+++ b/.npmrc
@@ -5,3 +5,8 @@ init-license=MIT
 
 @octanner:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${GITHUB_PAT}
+
+@octanner-ui:registry=https://artifactory.octanner.net/api/npm/oct-npmjs/
+//artifactory.octanner.net/api/npm/oct-npmjs/:email=${OCT_EMAIL}
+//artifactory.octanner.net/api/npm/oct-npmjs/:always-auth=true
+//artifactory.octanner.net/api/npm/oct-npmjs/:_auth=${ARTIFACTORY_TOKEN}
