try to use kitty instead of tmux

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,4 @@
+allow_remote_control yes
 font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
@@ -13,7 +14,7 @@ hide_window_decorations titlebar-only
 inactive_text_alpha 0.7
 
 # no tabs
-tab_bar_style hidden
+tab_bar_style separator
 
 # color scheme
 background            #272a32
@@ -51,14 +52,17 @@ map alt+d scroll_line_down
 
 map kitty_mod+t no_op
 
-# tmux prefix
-map kitty_mod+enter send_text all \x01
-map kitty_mod+j send_text all \x01
+map kitty_mod+shift+h neighboring_window left
+map kitty_mod+shift+l neighboring_window right
+map kitty_mod+shift+k neighboring_window up
+map kitty_mod+shift+j neighboring_window down
 
-# tmux pane focus
-map kitty_mod+shift+h send_text all \x01[
-map kitty_mod+shift+j send_text all \x01@
-map kitty_mod+shift+k send_text all \x01_
-map kitty_mod+shift+l send_text all \x01]
+enabled_layouts fat:bias=75;full_size=1;mirrored=false,stack
 
-map kitty_mod+shift+z send_text all \x01z
+map kitty_mod+shift+z toggle_layout stack
+
+map kitty_mod+enter
+map kitty_mod+enter>p
+map kitty_mod+enter>p remote_control_script kitty-opener
+map f1 remote_control_script /opt/homebrew/bin/zsh
+map kitty_mod+enter>n new_window_with_cwd
