move kitty.conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -52,17 +52,29 @@ map alt+d scroll_line_down
 
 map kitty_mod+t no_op
 
-map kitty_mod+shift+h neighboring_window left
-map kitty_mod+shift+l neighboring_window right
-map kitty_mod+shift+k neighboring_window up
-map kitty_mod+shift+j neighboring_window down
+# tmux prefix
+map kitty_mod+enter send_text all \x01
+map kitty_mod+j send_text all \x01
 
-enabled_layouts fat:bias=75;full_size=1;mirrored=false,stack
+# tmux pane focus
+map kitty_mod+shift+h send_text all \x01[
+map kitty_mod+shift+j send_text all \x01@
+map kitty_mod+shift+k send_text all \x01_
+map kitty_mod+shift+l send_text all \x01]
 
-map kitty_mod+shift+z toggle_layout stack
+map kitty_mod+shift+z send_text all \x01z
 
-map kitty_mod+enter
-map kitty_mod+enter>p
-map kitty_mod+enter>p remote_control_script kitty-opener
-map f1 remote_control_script /opt/homebrew/bin/zsh
-map kitty_mod+enter>n new_window_with_cwd
+# map kitty_mod+shift+h neighboring_window left
+# map kitty_mod+shift+l neighboring_window right
+# map kitty_mod+shift+k neighboring_window up
+# map kitty_mod+shift+j neighboring_window down
+#
+# enabled_layouts fat:bias=75;full_size=1;mirrored=false,stack
+#
+# map kitty_mod+shift+z toggle_layout stack
+#
+# map kitty_mod+enter
+# map kitty_mod+enter>p
+# map kitty_mod+enter>p remote_control_script kitty-opener
+# map f1 remote_control_script /opt/homebrew/bin/zsh
+# map kitty_mod+enter>n new_window_with_cwd
