create kitty_selector add python to nvim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -62,7 +62,5 @@ enabled_layouts fat:bias=75;full_size=1;mirrored=false,stack
 map kitty_mod+shift+z toggle_layout stack
 
 map kitty_mod+enter
-map kitty_mod+enter>p
-map kitty_mod+enter>p remote_control_script kitty-opener
-map f1 remote_control_script /opt/homebrew/bin/zsh
+map kitty_mod+enter>p kitten kitty_selector.py ~/workspace ~/workspace/octanner
 map kitty_mod+enter>n new_window_with_cwd
