--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,7 +14,7 @@ hide_window_decorations titlebar-only
 inactive_text_alpha 0.7
 
 # no tabs
-tab_bar_style separator
+tab_bar_style hidden
 
 # color scheme
 background            #272a32
