--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -62,5 +62,6 @@ enabled_layouts fat:bias=75;full_size=1;mirrored=false,stack
 map kitty_mod+shift+z toggle_layout stack
 
 map kitty_mod+enter
-map kitty_mod+enter>p kitten kitty_selector.py ~/workspace ~/workspace/octanner
+map kitty_mod+enter>p kitten kitty_selector.py any ~/workspace ~/workspace/octanner
+map kitty_mod+enter>o kitten kitty_selector.py open ~/workspace ~/workspace/octanner
 map kitty_mod+enter>n new_window_with_cwd
