add startup session

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -65,3 +65,4 @@ map kitty_mod+enter
 map kitty_mod+enter>p kitten kitty_selector.py any ~/workspace ~/workspace/octanner
 map kitty_mod+enter>o kitten kitty_selector.py open ~/workspace ~/workspace/octanner
 map kitty_mod+enter>n new_window_with_cwd
+startup_session ~/.config/kitty/startup-session.conf
