fix kitty selector

--- a/.npmrc
+++ b/.npmrc
@@ -3,8 +3,10 @@ init-author-email=tyler@tylerevans.co
 init-author-url=http://www.tylerevans.co/
 init-license=MIT
 
+@snaveevans:registry=https://npm.pkg.github.com
 @octanner:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${GITHUB_PAT}
+
 
 @octanner-ui:registry=https://artifactory.octanner.net/api/npm/oct-npmjs/
 //artifactory.octanner.net/api/npm/oct-npmjs/:email=${OCT_EMAIL}
